--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "js-shop",
+  "name": "y",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "sass": "node-sass -w assets/scss -o dist/css/ --recursive",
@@ -14,5 +13,14 @@
     "node-sass": "^8.0.0",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fiske92/js-shop.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fiske92/js-shop/issues"
+  },
+  "homepage": "https://github.com/fiske92/js-shop#readme",
+  "description": ""
 }
